<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.register.RegisterActivity">

        <RelativeLayout
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/colorBGError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TextView
                android:id="@+id/error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/gilroybold"
                android:text="Erro!"
                android:textColor="@color/colorTextError"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/icon_error"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toStartOf="@+id/error_text"
                android:src="@drawable/ic_error"
                app:tint="@color/colorTextError" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_message" />

        <TextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/gilroy"
            android:text="@string/welcome_to_app"
            android:textColor="@color/colorTextWhite"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/gilroybold"
            android:text="@string/welcome_to_app_name"
            android:textColor="@color/colorTextWhite"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title1" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/gilroy"
            android:gravity="center"
            android:text="@string/message_login"
            android:textColor="@color/colorTextWhite"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title2" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/edt_bg"
            android:fontFamily="@font/gilroybold"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:inputType="textPersonName|textCapWords"
            android:textColor="@color/colorTextWhite"
            android:hint="@string/name"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edt_bg"
            android:fontFamily="@font/gilroybold"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/colorTextWhite"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_name" />

        <Button
            android:id="@+id/login"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/gilroybold"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/colorTextWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />
    </androidx.constraintlayout.widget.ConstraintLayout>
