<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.events.MainEventsActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/error_message"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/colorBGError"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/error_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/gilroybold"
                    android:gravity="center"
                    android:textColor="@color/colorTextError"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/icon_error"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toStartOf="@+id/error_text"
                    android:src="@drawable/ic_error"
                    app:tint="@color/colorTextError" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@+id/error_message"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_alignStart="@+id/logo"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/gilroy"
                android:gravity="center"
                android:text="@string/logout"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome" />

            <TextView
                android:id="@+id/hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/error_message"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/gilroybold"
                android:text="@string/hello"
                android:textColor="@color/colorTextWhite"
                android:textSize="26sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hello"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/gilroy"
                android:text="@string/welcome"
                android:textColor="@color/colorTextWhite"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hello" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcome"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/gilroybold"
                android:text="@string/fake_email"
                android:textColor="@color/colorDate"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome" />

            <LinearLayout
                android:id="@+id/box_lists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email">

                <TextView
                    android:id="@+id/coupons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/gilroybold"
                    android:text="@string/coupons"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="16sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_coupons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    app:layoutManager="LinearLayoutManager"
                    tools:listitem="@layout/item_coupon" />

                <TextView
                    android:id="@+id/next_events"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/gilroybold"
                    android:text="@string/next_events"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="16sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_events"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    tools:listitem="@layout/item_event" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
